NEWS file for ttystatus
=======================

Version 0.14, released XXXXXXXXXX
---------------------------------

* Notifications are written to the standard output, not the terminal.
* A method for printing error messages is provided. They are printed to
  the standard error.
* The `PercentDone` class handles zero total amounts better now.

Version 0.13, released 2011-08-18
---------------------------------

* No upstream changes, but released with a new upstream version so that
  Debian packaging does not need to get convoluted.

Version 0.12, released 2011-07-24
---------------------------------

* API documentation is now done with Sphinx.
* The SIGWINCH signal is now marked as a re-starting one, so that socket I/O
  is not interrupted when an application uses ttystatus and the terminal is
  resized.

Version 0.11, released 2011-04-23
---------------------------------

* `pydoc ttystatus` now works better: you no longer need to access 
  modules to see the exported classes. Instead, see all of them directly.
* A final newline is no longer written out if there has been no output
  otherwise.


Version 0.10, released 2011-03-23
---------------------------------

* Fix handling of /dev/tty not being avilable. This can happen, e.g., when
  things are run from cron.


Version 0.9, released 2011-02-13
--------------------------------

* Add ttystatus.Integer.


Version 0.8.1, released 2011-01-30
--------------------------------

* Do not write notifications if output is disabled.


Version 0.8, released 2011-01-30
--------------------------------

* Write status output to /dev/tty by default.


Version 0.7, released 2010-10-09
--------------------------------

* Fix bug that failed to show the last few updates when .finish() was called.


Version 0.6, released 2010-07-13
--------------------------------

* Add ByteSpeed widget.


Version 0.5, released 2010-07-07
--------------------------------
