@@ -8,6 +8,8 @@ Version 0.14, released XXXXXXXXXX
 * A method for printing error messages is provided. They are printed to
   the standard error.
 * The `PercentDone` class handles zero total amounts better now.
+* Widgets may now be added using a simple format string. See
+  `ttystatus.TerminalStatus.format` method.
 
 Version 0.13, released 2011-08-18
 ---------------------------------
